--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ $services = [
 <body>
     <header>
         <!-- Cambia la ruta del logotipo aquí -->
-        <img src="images/logo.png" alt="Marck Business Logo">
+        <img src="images/Diseño%20sin%20título.png" alt="Marck Business Logo">
         <nav>
             <ul>
                 <li><a href="#about">Sobre nosotros</a></li>
