--- a/index.html
+++ b/index.html
@@ -169,9 +169,9 @@ $services = [
 </head>
 <body>
     <header>
-        <!-- Enlace al número de WhatsApp -->
+        <!-- Enlace al número de WhatsApp con imagen -->
         <a href="https://wa.me/50258140621" target="_blank">
-            <img src="images/Diseño%20sin%20título.png" alt="Marck Business Logo">
+            <img src="images/whats.png" alt="WhatsApp Marck Business">
         </a>
         <nav>
             <ul>
@@ -214,3 +214,4 @@ $services = [
     </footer>
 </body>
 </html>
+
