--- a/index.html
+++ b/index.html
@@ -31,28 +31,17 @@ $services = [
             color: var(--blanco);
         }
 
-        /* Barra fija */
         header {
             background-color: var(--azul-marino);
             color: var(--blanco);
             padding: 2rem;
             text-align: center;
-            position: fixed;
-            width: 100%;
-            top: 0;
-            z-index: 1000;
-            left: 0;
         }
 
         header img {
             width: 300px; /* Tamaño grande del logotipo */
             height: auto;
             cursor: pointer; /* Añadimos el cursor pointer para indicar que es un enlace */
-        }
-
-        /* Espacio para que no se sobrepongan los elementos debajo del header */
-        body {
-            padding-top: 140px; /* Añadimos espacio para la barra fija */
         }
 
         nav ul {
@@ -70,7 +59,7 @@ $services = [
         nav ul li a {
             color: var(--blanco);
             text-decoration: none;
-            font-size: 1.2rem;
+            font-size: 1.1rem;
         }
 
         nav ul li a:hover {
@@ -84,11 +73,6 @@ $services = [
 
         .section h2 {
             color: var(--naranja);
-            font-size: 2.5rem;
-        }
-
-        .section p {
-            font-size: 1.2rem; /* Aumentamos el tamaño de la letra */
         }
 
         footer {
@@ -104,7 +88,7 @@ $services = [
             border: none;
             padding: 0.5rem 1rem;
             cursor: pointer;
-            font-size: 1.1rem;
+            font-size: 1rem;
         }
 
         button:hover {
@@ -173,7 +157,7 @@ $services = [
     <section id="contact" class="section">
         <h2>Contáctanos</h2>
         <p id="contact-number"></p>
-        <form action="mailto:juanluisruizbalcarcel@gmail.com" method="POST" enctype="text/plain">
+        <form action="#" method="POST">
             <label for="name">Nombre:</label>
             <input type="text" id="name" name="name" required><br><br>
             
@@ -192,4 +176,3 @@ $services = [
     </footer>
 </body>
 </html>
-
