--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ $services = [
     </style>
     <script>
         // Datos dinámicos simulados
-        const companyName = "<?php echo $company_name; ?>";
+        const companyName = "MarckBusiness";
         const services = [
             "<?php echo implode('", "', $services); ?>"
         ];
