--- a/index.html
+++ b/index.html
@@ -107,7 +107,13 @@ $services = [
         // Datos dinámicos simulados
         const companyName = "MarckBusiness";
         const services = [
-            "<?php echo implode('", "', $services); ?>"
+            ""Consultoría Empresarial",
+    "Estrategia de Marketing",
+    "Planificación Financiera",
+    "Actualizaciones de Software",
+    "Desarrollo de Sistemas",
+    "Asesoría en Procesos de Producción y Atención",
+    "Desarrollo de Páginas Web"
         ];
 
         // Función para renderizar contenido dinámico
