--- a/index.html
+++ b/index.html
@@ -107,14 +107,14 @@ $services = [
         // Datos dinámicos simulados
         const companyName = "MarckBusiness";
         const services = [
-            ""Consultoría Empresarial",
+            "Consultoría Empresarial",
     "Estrategia de Marketing",
     "Planificación Financiera",
     "Actualizaciones de Software",
     "Desarrollo de Sistemas",
     "Asesoría en Procesos de Producción y Atención",
     "Desarrollo de Páginas Web"
-        ];
+        
 
         // Función para renderizar contenido dinámico
         function renderContent() {
