--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@ $services = [
     "Consultoría Empresarial",
     "Estrategia de Marketing",
     "Planificación Financiera",
+    "Actualizaciones de Software",
+    "Desarrollo de Sistemas",
+    "Asesoría en Procesos de Producción y Atención",
+    "Desarrollo de Páginas Web"
 ];
 ?>
 
@@ -102,19 +106,35 @@ $services = [
             border-radius: 4px;
             width: 80%;
         }
+
+        /* Estilo para la imagen de WhatsApp flotante */
+        .whatsapp-btn {
+            position: fixed;
+            bottom: 20px;
+            right: 20px;
+            width: 60px;
+            height: 60px;
+            background-image: url('images/whats.png');
+            background-size: cover;
+            background-position: center;
+            border-radius: 50%;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+            cursor: pointer;
+            z-index: 999;
+        }
     </style>
     <script>
         // Datos dinámicos simulados
-        const companyName = "MarckBusiness";
+        const companyName = "<?php echo $company_name; ?>";
         const services = [
             "Consultoría Empresarial",
-    "Estrategia de Marketing",
-    "Planificación Financiera",
-    "Actualizaciones de Software",
-    "Desarrollo de Sistemas",
-    "Asesoría en Procesos de Producción y Atención",
-    "Desarrollo de Páginas Web"
-        
+            "Estrategia de Marketing",
+            "Planificación Financiera",
+            "Actualizaciones de Software",
+            "Desarrollo de Sistemas",
+            "Asesoría en Procesos de Producción y Atención",
+            "Desarrollo de Páginas Web"
+        ];
 
         // Función para renderizar contenido dinámico
         function renderContent() {
@@ -163,7 +183,7 @@ $services = [
     <section id="contact" class="section">
         <h2>Contáctanos</h2>
         <p id="contact-number"></p>
-        <form action="#" method="POST">
+        <form action="mailto:juanluisruizbalcarcel@gmail.com" method="POST">
             <label for="name">Nombre:</label>
             <input type="text" id="name" name="name" required><br><br>
             
@@ -180,5 +200,8 @@ $services = [
     <footer>
         <p id="footer-text"></p>
     </footer>
+
+    <!-- Botón flotante de WhatsApp -->
+    <div class="whatsapp-btn"></div>
 </body>
 </html>
