--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@ $services = [
 
         // Función para renderizar contenido dinámico
         function renderContent() {
-            document.getElementById("about-text").textContent = `¡Bienvenido a ${companyName}! Estamos dedicados a ayudar a tu negocio a crecer y tener éxito.`;
+            document.getElementById("about-text").textContent = `¡Bienvenido a MarckBusiness Estamos dedicados a ayudar a tu negocio a crecer y tener éxito.`;
 
             const servicesList = document.getElementById("services-list");
             services.forEach(service => {
