--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@ $services = [
                 servicesList.appendChild(listItem);
             });
 
-            document.getElementById("footer-text").textContent = `© ${new Date().getFullYear()} ${companyName}. Todos los derechos reservados.`;
+            document.getElementById("footer-text").textContent = `© ${new Date().getFullYear()} MarckBusiness. Todos los derechos reservados.`;
             document.getElementById("contact-number").textContent = "Número de contacto: +502 58140621";
         }
 
