--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ $services = [
         }
 
         header img {
-            width: 300px; /* Tamaño grande del logotipo */
+            width: 500px; /* Tamaño aún más grande del logotipo */
             height: auto;
             margin-bottom: 1rem;
         }
