--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@ $services = [
 
         <!-- Logotipo de la empresa -->
         <a href="https://wa.me/50258140621" target="_blank">
-            <img class="logo" src="images/whats.png" alt="Logo">
+            <img class="logo" src="images/Diseño%20sin%20título.png" alt="Logo">
         </a>
         
         <!-- Barra de navegación -->
